add 'config' extension w/xcode config; mustache stuff
* make 'mustache' the penultimate segment of filenames

--- a/bzl/docs/notes/macos.adoc
+++ b/bzl/docs/notes/macos.adoc
@@ -13,9 +13,12 @@ Some useful cmds:
 => /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk
 
 * `xcrun --sdk macosx --show-sdk-path`
-* `xcrun --sdk iphoneos --show-sdk-path`
 
 => /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX13.1.sdk
+
+* `xcrun --sdk iphoneos --show-sdk-path`
+
+* `xcrun --show-sdk-version`
 
 
 * `xcode-select -p` - prints path of selected DEVELOPER_DIR
